style.css
body{display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
     margin: 0;
     height: 100vh;
     width: 100vw
     }

.Sidebar{background-color: gray;
         grid-column: 1/2;
         grid-row: 1/3;}

.Header{background-color: lightblue;
        grid-column: 2/3;
        grid-row: 1/2}

.main-content{background-color: lightgreen;
              grid-column: 2/3;
              grid-row: 2/3}

a{text-decoration: none;
  color: white;
  }

.dashboard{margin: 20px 10px 40px 20px}

.main-links{display: grid;
            grid-template-columns: 1fr; 
            gap: 15px;
            margin: 10px 10px 40px 20px}

.help-links{display: grid;
           grid-template-columns: 1fr; 
           gap: 15px;
           margin: 10px 10px 40px 20px}

.search-bar{display: grid;}

.profile-bar{display: flex;
             flex-direction: row;
             justify-content: space-between;
             }
.name{display: grid;
      grid-template-columns: 1fr;
      margin: 0}

.projects{display: grid;
          grid-template-columns: 1fr 1fr;
          grid-template-rows: 1fr 1fr 1fr;
          gap: 5px;
          }

.content-grid{display: grid;
              grid-template-columns: 4fr 1fr;
              grid-template-rows: 1fr 1fr 1fr;}

